# TAK_Meshtastic_Gateway

./: README.md  pyproject.toml
tak_meshtastic_gateway/: __init__.py  dm_socket_thread.py  tak_meshtastic_gateway.py
tak_meshtastic_gateway/tak_meshtastic_gateway/: dm_socket_thread.py  tak_meshtastic_gateway.py
