[tool.poetry]
name = "TAK-Meshtastic-Gateway"
version = "0.0.0"
description = "Send and receive data from ATAK, WinTAK, or iTAK over Meshtastic"
authors = ["OpenTAKServer <opentakserver@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/brian7704/TAK_Meshtastic_Gateway"
documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
beautifulsoup4 = "4.12.3"
meshtastic = "2.3.11"
google-cloud-pubsub = "2.21.3"
takproto = "2.1.1"
colorlog = "6.8.2"
unishox2-py3 = "1.0.0"
netifaces2 = "0.0.22"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.files."tak_meshtastic_gateway/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
opentakserver = "tak_meshtastic_gateway.app:main"