[tool.poetry]
name = "TAK-Meshtastic-Gateway"
version = "0.0.0"
description = "Send and receive data from ATAK, WinTAK, or iTAK over Meshtastic"
authors = ["OpenTAKServer <opentakserver@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/brian7704/TAK_Meshtastic_Gateway"
documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
python = [
    {platform = "win64", version = ">=3.12, <3.13"},
    {platform = "linux", version = "^3.8"},
    {platform = "macos", version = "^3.8"}
]
beautifulsoup4 = "4.12.3"
meshtastic = "2.3.11"
pypubsub = "4.0.3"
colorlog = "6.8.2"
unishox2-py3 = [
    {platform = "linux", version = "1.0.0"},
    {platform = "win64", url = "https://github.com/brian7704/OpenTAKServer-Installer/raw/master/unishox2_py3-1.0.0-cp312-cp312-win_amd64.whl"}
]
netifaces2 = "0.0.22"
takproto = {git = "https://github.com/snstac/takproto", rev = "refs/pull/16/merge"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.files."tak_meshtastic_gateway/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
opentakserver = "tak_meshtastic_gateway.app:main"